<resources>
    <string name="app_name">Agenda</string>

    <string name="logo">LOGO</string>
    <string name="textLogin">Inicio de Sesión</string>
    <string name="hintUser">Nombre de Usuario</string>
    <string name="hintPasswd">Contraseña</string>
    <string name="textBtnLogin">Iniciar Sesión</string>
    <string name="textRememberMe">Recordar</string>

    <string name="btnRegistro">Registro</string>
    <string name="btnListado">Listado</string>
    <string name="btnSalir">Salir</string>

    <string name="btnListRealizadas">Realizada</string>
    <string name="btnListPendientes">Pendiente</string>

    <string name="btnRegistrarNuevaTarea">Registrar Nueva Tarea</string>
    <string name="btnCancelar">Cancelar</string>

    <string name="btnModificar">Modificar</string>
    <string name="btnBorrar">Eliminar</string>

    <string name="textViewNombre">Nombre</string>
    <string name="textViewDescripcion">Descripcion</string>
    <string name="textViewFecha">Fecha</string>
    <string name="textViewCoste">Coste</string>
    <string name="textViewPrioridad">Prioridad</string>
    <string name="btnRegistrar">Registrar</string>

    <string name="editTextPassword">Contraseña</string>
    <string name="editTextPasswordConfirmar">Confirmar contraseña</string>

    <string-array name="prioridad">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
        <item>Urgente</item>
    </string-array>

    <!-- Errores -->
    <string name="loginError">Nombre de usuario y/o contraseña incorrecto/s</string>

    <!-- Menu -->
    <string name="changePassword">Cambiar Contraseña</string>
</resources>